syntax = "proto3";

package pecan;

// ==========================================
// UI -> Server Communication
// ==========================================
service ClientService {
    // Bidirectional stream for the UI client to talk to the Server
    rpc StreamEvents(stream ClientMessage) returns (stream ServerMessage);
}

message ClientMessage {
    oneof payload {
        StartTaskRequest start_task = 1;
        TaskInput user_input = 2;
        ToolApproval tool_approval = 3;
    }
}

message StartTaskRequest {
    string initial_prompt = 1;
}

message TaskInput {
    string session_id = 1;
    string text = 2;
}

message ToolApproval {
    string session_id = 1;
    string tool_call_id = 2;
    bool approved = 3;
    string reject_reason = 4;
}

message ServerMessage {
    oneof payload {
        SessionStarted session_started = 1;
        AgentOutput agent_output = 2;
        ToolApprovalRequest approval_request = 3;
        TaskCompleted task_completed = 4;
    }
}

message SessionStarted {
    string session_id = 1;
}

message AgentOutput {
    string session_id = 1;
    string text = 2;
}

message ToolApprovalRequest {
    string session_id = 1;
    string tool_call_id = 2;
    string tool_name = 3;
    string arguments_json = 4;
}

message TaskCompleted {
    string session_id = 1;
}

// ==========================================
// Agent -> Server Communication
// ==========================================
service AgentService {
    // Bidirectional stream for the isolated Agent to talk to the Server
    rpc Connect(stream AgentEvent) returns (stream HostCommand);
}

message AgentEvent {
    oneof payload {
        AgentRegistration register = 1;
        LLMCompletionRequest completion_request = 2;
        ToolExecutionRequest tool_request = 3;
        TaskProgress progress = 4;
        GetModelsRequest get_models = 5;
        ContextCommand context_command = 6;
    }
}

message AgentRegistration {
    string agent_id = 1;
    string session_id = 2;
}

message GetModelsRequest {
    string request_id = 1;
}

enum ContextSection {
    SYSTEM = 0;
    CONVERSATION = 1;
    TOOLS = 2;
}

message ContextCommand {
    string request_id = 1;
    oneof action {
        AddContextMessage add_message = 2;
        GetContextInfo get_info = 3;
        CompactContext compact = 4;
    }
}

message AddContextMessage {
    ContextSection section = 1;
    string role = 2;
    string content = 3;
    string metadata_json = 4; // tool calls, etc.
}

message GetContextInfo {
    // Empty for now, just asks for sizes
}

message CompactContext {
    ContextSection section = 1;
    int32 keep_recent_messages = 2;
}

message LLMCompletionRequest {
    string request_id = 1;
    string model_key = 2; // e.g., 'qwen3' or 'mock'
    string params_json = 3; // optional overrides like temperature
}

message ToolExecutionRequest {
    string request_id = 1;
    string tool_name = 2;
    string arguments_json = 3;
}

message TaskProgress {
    string status_message = 1;
}

message HostCommand {
    oneof payload {
        RegistrationResponse registration_response = 1;
        LLMCompletionResponse completion_response = 2;
        ToolExecutionResponse tool_response = 3;
        ShutdownCommand shutdown = 4;
        ProcessInput process_input = 5;
        GetModelsResponse models_response = 6;
        ContextResponse context_response = 7;
    }
}

message GetModelsResponse {
    string request_id = 1;
    message ModelInfo {
        string key = 1;
        string name = 2;
        string description = 3;
    }
    repeated ModelInfo models = 2;
}

message ContextResponse {
    string request_id = 1;
    string info_json = 2;
    string error_message = 3;
}

message RegistrationResponse {
    bool success = 1;
}

message LLMCompletionResponse {
    string request_id = 1;
    string response_json = 2;
    string error_message = 3;
}

message ToolExecutionResponse {
    string request_id = 1;
    string result_json = 2;
    string error_message = 3;
}

message ShutdownCommand {
    string reason = 1;
}

message ProcessInput {
    string text = 1;
}
